testsuite/tests/typecheck/should_fail/tcfail097.stderr

tcfail097.hs:5:6: error:
    • Could not deduce (Eq a0)
        arising from a type ambiguity check for
        the type signature for ‘f’
      from the context: Eq a
        bound by the type signature for:
                   f :: forall a. Eq a => Int -> Int
        at tcfail097.hs:5:6-23
      The type variable ‘a0’ is ambiguous
      These potential instances exist:
        instance Eq Ordering -- Defined in ‘GHC.Classes’
        instance Eq () -- Defined in ‘GHC.Classes’
        instance (Eq a, Eq b) => Eq (a, b) -- Defined in ‘GHC.Classes’
        ...plus 21 others
        ...plus four instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the ambiguity check for ‘f’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature: f :: Eq a => Int -> Int
